change html and css
this is fix

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <p>
           Jl. Bukit Beringin Elok XIII 611 <br />
           Wonosari Ngaliyan Semarang<br />
-          Jawa Tengah Indonesia
+          Jawa Tengah,Indonesia
         </p>
       </div>
       <div class="column">
