--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="shortcut icon" href="./img/logo1.png" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
   <body>
     <!-- header -->
 
